--- a/TaskList/src/main/res/layout/create_task.xml
+++ b/TaskList/src/main/res/layout/create_task.xml
@@ -9,11 +9,11 @@
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="edit_message"/>
+        android:hint="@string/edit_message"/>
 
     <Button android:id="@+id/create_Btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Task" />
+        android:text="@string/create_Btn"/>
 
 </LinearLayout>
